BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/bms_cn_setting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This is to stroe org independent values for BMS China.
Such as SFID, URL.</description>
    <fields>
        <fullName>Coaching_Block_Days_BMS_CN__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Coaching Block Days</description>
        <label>Coaching Block Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cycle_Plan_Detail_Report_ID__c</fullName>
        <description>to store report SFID of link in Cycle Plan Page for 
VH Detail lnk
H Detail lnk
M Detail lnk</description>
        <inlineHelpText>to store report SFID of link in Cycle Plan Page for 
VH Detail lnk
H Detail lnk
M Detail lnk</inlineHelpText>
        <label>Cycle Plan Detail Report ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enable_Retargeting_BMS_CN__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable Re-targeting Flag(True: enable, False: disable)</description>
        <label>ENABLE_RETARGETING</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ORG_URL__c</fullName>
        <description>Store current org URL, example:
https://cs14.salesforce.com/</description>
        <inlineHelpText>Store current org URL, example:
https://cs14.salesforce.com/</inlineHelpText>
        <label>ORG URL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>BMS CN Settings</label>
</CustomObject>